--- a/recreate-datapoint/Makefile
+++ b/recreate-datapoint/Makefile
@@ -3,3 +3,6 @@ run:
 
 css:
 	@npx tailwindcss -i ./static/input.css -o ./static/output.css --watch
+
+cssbuild:
+	@npx tailwindcss -i ./static/input.css -o ./static/output.css --build
