Updated dockerfile for client

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,16 @@
-# Use an official Node runtime as a parent image
+# Switch to alpine in the future
 FROM node
 
 WORKDIR /app
 
-# Copy the current directory contents into the container at /app
-COPY . .
+# Copying and installing this first is better
+COPY app/package.json app/package-lock.json ./
 
 # Install dependencies
 RUN npm install
+
+# Copy the current directory contents into the container at /app
+COPY . .
 
 # Build the app
 RUN npm run build
