--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,29 @@
 {
-  "devDependencies": {
-    "tailwindcss": "^3.4.7"
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "http-server": "^14.1.1"
+    "@p5-wrapper/next": "^1.0.3",
+    "@p5-wrapper/react": "^4.4.2",
+    "next": "14.2.5",
+    "p5": "^1.9.4",
+    "react": "^18",
+    "react-dom": "^18"
   },
-  "scripts": {
-    "build": "npx tailwindcss -i ./static/input.css -o ./static/output.css --build",
-    "start": "http-server ./static --port 3000"
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
