--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,7 +4,7 @@ FROM node
 WORKDIR /app
 
 # Copying and installing this first is better
-COPY app/package.json app/package-lock.json ./
+COPY ./package.json ./package-lock.json ./
 
 # Install dependencies
 RUN npm install
@@ -14,8 +14,6 @@ COPY . .
 
 # Build the app
 RUN npm run build
-
-EXPOSE 3000
 
 # Serve the app
 CMD ["npm", "start"]
