--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "http-server": "^14.1.1"
   },
   "scripts": {
-    "build": "npx tailwindcss -i ./static/input.css -o ./static/output.css --build",
+    "build": "npx tailwindcss -i ./static/input.css -o ./static/output.css --minify",
     "start": "http-server ./static --port 3000"
   }
 }
