--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@p5-wrapper/next": "^1.0.3",
-    "@p5-wrapper/react": "^4.4.2",
+    "konva": "^9.3.14",
     "next": "14.2.5",
-    "p5": "^1.9.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-konva": "^18.2.10"
   },
   "devDependencies": {
     "@types/node": "^20",
