--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,4 +8,6 @@ RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 COPY ./app /code/app
 
+# Copy the static html files into a directory that matches the structure of the current project
+
 CMD ["fastapi", "run", "app/main.py", "--port", "8000"]
