Reorganise project structure and fix redirect
Everything now works in a single Docker container again.
The frontend is built and then hosted with FastAPI (using uvicorn).

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,6 @@ yarn-error.log*
 recreate-datapoint/
 **/__pycache__
 .vscode
-client/.next
-client/out
-server/app/out
+src/client/.next
+src/client/out
+src/server/app/out
