--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,17 @@
 version: '3.8'
 
 services:
-  server:
+  app:
     build:
-      context: ./server
+      context: ./src
       dockerfile: Dockerfile
     ports:
-      - "8000:8000"
+      - "3000:3000"
     depends_on:
       - redis
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-
-  client:
-    build:
-      context: ./client
-      dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
-    depends_on:
-      - server
 
   redis:
     image: "redis:alpine"
