--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   app:
     build:
-      context: ./src
+      context: ./
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
