--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,15 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-konva": "^18.2.10"
+    "react-konva": "^18.2.10",
+    "svg-path-parser": "^1.1.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/svg-path-parser": "^1.1.6",
     "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
