--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "js-cookie": "^3.0.5",
     "next": "14.2.5",
+    "onnxruntime-web": "^1.19.0",
     "react": "^18",
     "react-dom": "^18",
     "react-konva": "^18.2.10",
