--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,19 @@
 version: '3.8'
 
 services:
+  nginx:
+    image: nginx:alpine
+    container_name: nginx
+    volumes:
+      - ./deploy/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "80:80"
+    depends_on:
+      - app
+
   app:
+    container_name: app
+    restart: always
     build:
       context: ./
       dockerfile: Dockerfile
@@ -17,3 +29,9 @@ services:
     image: "redis:alpine"
     ports:
       - "6379:6379"
+    container_name: redis
+    command: [ "redis-server", "--save", '""' ]
+
+networks:
+  default:
+    name: qdvs_network
