--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -8,14 +8,26 @@ server {
   server_name localhost;
 
   location /ws/ {
-    proxy_pass http://quickdraw_vs_cluster/;
+    # note the lack of a trailing / here, deliberate! /ws/ otherwise would
+    # become / on the backend, which we do not want.
+    proxy_pass http://quickdraw_vs_cluster;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     proxy_set_header Host $host;
   }
 
+  location /api/ {
+    proxy_pass http://quickdraw_vs_cluster/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
   location / {
-    proxy_pass http://quickdraw_vs_cluster;
+      root /out;
+      index index.html;
+      try_files $uri $uri/ =404;
   }
 }
