--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,11 @@ version: '3.8'
 
 services:
   nginx:
-    image: nginx:alpine
     container_name: nginx
-    volumes:
-      - ./deploy/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    restart: always
+    build:
+      context: ./
+      dockerfile: frontend.Dockerfile
     ports:
       - "80:80"
     depends_on:
@@ -16,7 +17,7 @@ services:
     restart: always
     build:
       context: ./
-      dockerfile: Dockerfile
+      dockerfile: backend.Dockerfile
     ports:
       - "3000:3000"
     depends_on:
@@ -31,7 +32,3 @@ services:
       - "6379:6379"
     container_name: redis
     command: [ "redis-server", "--save", '""' ]
-
-networks:
-  default:
-    name: qdvs_network
