Cache onnx model for 7 days

--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -25,6 +25,12 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
+  location /model3_4_large.onnx {
+      root /out;
+      expires 7d;
+      add_header Cache-Control "public";
+  }
+
   location / {
       root /out;
       index index.html;
