Use CNN model for frontend, update websocket loop to not use player id

--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -25,7 +25,7 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  location /model3_4_large.onnx {
+  location /CNN_cat16_v6-0_large_gputrain.onnx {
       root /out;
       expires 7d;
       add_header Cache-Control "public";
